# freegsnke_v2.1.0_nchc

./: COPYRIGHT  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-freegs4e.txt  requirements.txt
analysis_tools/: my_settings.py  plottinig.py
docs/: Makefile  README.md  build_documentation.sh  conf.py  dummy.rst  index.rst
examples/: README.md  config.yaml  config_template.yaml  example00 - build_tokamak_machine.ipynb  example01 - static_inverse_solve_MASTU.ipynb  example02 - static_forward_solve_MASTU.ipynb  example03 - extracting_equilibrium_quantites.ipynb  example04 - using_magnetic_probes.ipynb  example05 - evolutive_forward_solve.ipynb  example06a - static_forward_MASTU_solves_from_magnetics_only_data.ipynb  example06b - static_forward_MASTU_solves_from_magnetics_and_MSE_data.ipynb  example07 - static_inverse_solve_SPARC.ipynb  example08 - static_inverse_solve_ITER.ipynb  example09 - virtual_circuits_MASTU.ipynb  example10 - growth_rates.ipynb  example10_hhtest.ipynb  extract_measures.py  first.geqdsk  inverse_solve.py  inverse_solve_pipeline.py  machine_first.py  non_linear.py  readme_byHH  simple_diverted_currents_PaxisIp.pk  simple_limited_currents_PaxisIp.pk
freegsnke/: GSstaticsolver.py  Myy_builder.py  __init__.py  build_machine.py  circuit_eq_metal.py  circuit_eq_plasma.py  copying.py  equilibrium_update.py  implicit_euler.py  inverse.py  jtor_refinement.py  jtor_update.py  limiter_func.py  linear_solve.py  machine_config.py  machine_update.py  (+10 more)
freegsnke.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+37 files in other folders)
